--- a/exercise3/style.css
+++ b/exercise3/style.css
@@ -6,7 +6,7 @@ CSS.
 
 /* General syling */
 p {
-  font-size:20px;
+  font-size:15px;
   color:black;
 }
 
@@ -15,33 +15,31 @@ h1 {
   color:blue;
 }
 
-.p1 {
-  border: 5px;
-  border-style: solid;
-  width:60%;
-  margin-bottom: 10px;
-  margin: auto;
-  padding: 5px;
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.p2 {
-  border: 10px;
-  font-family: arial;
-  border-style: solid;
-  border-color: blue;
-  width:60%;
-  float: left;
-  padding: 5px;
-  margin:10px;
+.gallery {
+  border: 1px solid #fff;
+  margin: 10px;
+  width: 180px;
+
 }
 
-.p3 {
-  border: 10px;
-  font-family: verdana;
-  border-style: solid;
-  border-color: red;
-  width:60%;
-  float: right;
-  padding: 5px;
-  margin:10px;
+.gallery:hover {
+  border: 1px solid #777;
+  background-color: #dbdfff;
+}
+
+div.gallery img {
+  float: center;
+  width: 100%;
+  height: auto;
+}
+
+.desc {
+  padding: 15px;
+  text-align: center;
 }
