--- a/exercise4/style.css
+++ b/exercise4/style.css
@@ -4,7 +4,7 @@ CSS.
 
 **********************************************/
 
-/* General syling */
+/* General styling */
 p {
   font-size:15px;
   color:black;
